--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,11 @@
 version: '3.5'
+
+services:
+  nginx:
+    container_name: nginx
+    build:
+      context: ./etc/docker/nginx
+    ports:
+      - 300:80
+    volumes:
+      - ./public:/app/www/public
