--- a/etc/docker/nginx/Dockerfile
+++ b/etc/docker/nginx/Dockerfile
@@ -1,3 +1,8 @@
 FROM nginx:1.19
 
+#ARG UID
+#EXPOSE $UID
+#
+#RUN adduser -u ${UID} --disabled-password --gecos "" username
+
 COPY default.conf /etc/nginx/conf.d/
